# anyrouter-autolog-main

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  LICENSE  PROXY_SETUP.md  README.md  SELF_HOSTED_RUNNER.md  balance_hash.txt  checkin.py  docker-compose.yml  docker-run.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: check-in.yml  checkin.yml
anyrouter/: __init__.py  notify.py
docs/: LOCAL_TEST.md
get_user/: anyrouter_accounts.json  auto_login.py  merge_accounts.py  user.json  user.json.example
run-20488112142-logs/: 0_check-in.txt
run-20488112142-logs/check-in/: 1_Set up job.txt  23_Complete job.txt  system.txt
scripts/: run-workflow-sim.sh
tests/: test_notify.py
utils/: config.py  notify.py
